--- a/main.css
+++ b/main.css
@@ -1,3 +1,8 @@
+* {
+    padding: 0;
+    margin: 0;
+}
+
 .modal__button {
     display: block;
     background-color: rgb(77, 64, 252);
@@ -7,10 +12,8 @@
     padding: 20px 30px;
     margin: auto;
     border: none;
-    cursor: pointer;    
+    cursor: pointer;
 }
-
-
 
 .modal__header {
     position: left;
@@ -31,66 +34,74 @@ h2 {
 }
 
 .modal__body {
-    position: left;
     padding: 30px 20px;
-    
+}
+
+.buttonok {
+    display: inline;
+    color: white;
+    font-size: 16px;
+    text-align: center;
+    padding: 10px 20px;
+    margin: 6px 3px;
+    border: none;
+    cursor: pointer;
 }
 
 .okay__btn {
-    display: inline;
     background-color: rgb(62, 192, 62);
-    color: white;
-    font-size: 16px;
-    text-align: center;
-    padding: 10px 20px;
-    margin: 6px 3px;
-    border: none;
-    float: right;
-    cursor: pointer;
 }
 
 .cancel__btn {
-    display: inline;
     background-color: rgb(209, 36, 36);
-    color: white;
-    font-size: 16px;
-    text-align: center;
-    padding: 10px 20px;
-    margin: 6px 3px;
-    border: none;
-    float: right;
-    cursor: pointer;
 }
 
 .modal__footer {
-    position: left;
     padding: 60px 20px;
 }
 
+.button__container {
+    float: right;
+}
+
 .modal__inner {
-    position: relative;
-    width: 30%;
-    height: 35%;
+    width: 50%;
     background-color: rgb(220, 220, 220);
     box-shadow: 5px 10px 10px rgb(35, 35, 35);
-    margin-left: 35%;
-    margin-right: 35%;
-    margin-top: 15%;
-    margin-bottom: 15%;
-}
+    margin: 20% auto;
+  }
 
 .modal {
     display: none;
-    position: fixed; 
-    left: 0;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
     top: 0;
     width: 100%;
     height: 100%;
-    overflow: auto;
-    background-color: rgb(0,0,0);
-    background-color: rgba(0,0,0,0.4);
+    background-color: rgba(0, 0, 0, 0.3);
+   }
+
+@media screen and (max-width: 560px) {
+    .modal__inner {width: 100%;
+    }}
+
+@keyframes fadein {
+    from { opacity: 0}
+    to { opacity: 1}
 }
 
+@keyframes fadeout {
+    from { opacity: 1}
+    to { opacity: 0}
+}
 
+.fadein {
+    animation: fadein 1s;
+}
 
+.fadeout {
+    animation: fadeout 1s;
+}
 
